Fix draw button at top

--- a/source/icsm/clip/clip.html
+++ b/source/icsm/clip/clip.html
@@ -1,7 +1,7 @@
-<div class="well well-sm">
+<div class="well well-sm" style="margin-bottom:5px">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12" style="padding:0">
 				<div class="" role="group" aria-label="...">
 					<button ng-click="initiateDraw()" ng-disable="client.drawing" tooltip-placement="bottom" uib-tooltip="Enable drawing of a bounding box. On enabling, click on the map and drag diagonally"
 						class="btn btn-primary btn-default">Select an area...</button>
