Update the NSW header image to a link

--- a/source/icsm/header/header.html
+++ b/source/icsm/header/header.html
@@ -8,9 +8,13 @@
             <span class="icon-bar"></span>
         </button>
 
-        <a href="http://www.ga.gov.au" class="hidden-xs header-logo">
+        <a href="http://www.ga.gov.au" class="hidden-xs header-logo" style="padding-right: 0">
             <img src="icsm/resources/img/Geoscience Australia.jpg" alt="Geoscience Australia" class="elvis-logo"></img>
+        </a>
+        <a href="http://spatialservices.finance.nsw.gov.au/" class="hidden-xs header-logo" style="padding-right: 0">
             <img src="icsm/resources/img/NSW.jpg" alt="NSW Land $amp;Property Information" class="elvis-logo"></img>
+        </a>
+        <a href="http://www.ga.gov.au" class="hidden-xs header-logo last">
             <img src="icsm/resources/img/logo-ACT.jpg" alt="ACT Government" class="elvis-logo"></img>
          </a>
         <a href="http://www.ga.gov.au" class="visible-xs"><img src="icsm/resources/img/icsm-logo-sml.gif" alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="logo-stacked"></img></a>
