--- a/source/icsm/results/abstractbutton.html
+++ b/source/icsm/results/abstractbutton.html
@@ -1,3 +1,3 @@
-<button type="button" class="undecorated" title="View Full title and abstract of this dataset" ng-click="toggle()">
+<button ng-show="show" type="button" class="undecorated" title="View full title and abstract of this dataset" ng-click="toggle()">
 	<i class="fa fa-lg" ng-class="{'fa-caret-down active':item.showAbstract, 'fa-caret-right':!item.showAbstract}"></i>
 </button>
