--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -38,19 +38,19 @@
                      <button ng-click="list.checkChildren(items)" style="width:7em" class="btn btn-xs btn-default">
                         <span ng-show="!list.childrenChecked(items)">Select all</span>
                         <span ng-show="list.childrenChecked(items)">Deselect all</span>
-                  </button>
+                     </button>
                      <strong uib-tooltip="{{filter.types[key].description}}">{{key}}</strong>
                   </h5>
                   <div ng-repeat="item in items | matchedItems" icsm-abstract-hover item="item" >
                      <div tooltip-append-to-body="true" uib-tooltip-template="'icsm/results/abstracttooltip.html'" tooltip-popup-delay="400"
                               data-ng-mouseenter="show(item)" data-ng-mouseleave="hide(item)">
                         <input type="checkbox" ng-model="item.selected" />
-                        <icsm-abstract item="item" ng-if="item.source == 'NSW Government'"></icsm-abstract>
+                        <icsm-abstract item="item"></icsm-abstract>
                         <common-cc version="mappings[item.source].ccLicence"></common-cc>
                         <span class="listItem" item="item" icsm-abstract-link></span>
                         <span ng-show="item.file_size" style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
                      </div>
-                     <div ng-if="item.source == 'NSW Government'" ng-show="item.showAbstract" class="well">
+                     <div ng-show="item.showAbstract" class="well">
                         <span ng-show="!item.metadata">
                            <i class="fa fa-spinner fa-spin fa-lg fa-fw"></i>
                            <span>Loading metadata...</span>
