Update info and help to match latest behaviour

--- a/source/icsm/clip/infobbox.html
+++ b/source/icsm/clip/infobbox.html
@@ -1,12 +1,10 @@
 <div class="">
-	<strong style="font-size:120%">Select an area of interest.</strong> There are two ways to select your area of interest:
-	<ol>
-		<li>By hitting the "Draw" button an area on the map can be selected with the mouse by clicking a
-         corner and while holding the left mouse button
-			down drag diagonally across the map to the opposite corner or</li>
-	</ol>
-	Once drawn the points can be modified by the overwriting the values manually or drawing another area by
-   clicking the "Draw" button again. <br/>
+	<strong style="font-size:120%">Select an area of interest.</strong>
+   By hitting the "Select an area..." button an area on the map can be selected with the mouse by clicking a
+   corner and while holding the left mouse button
+	down drag diagonally across the map to the opposite corner.
+	<br/>
+	Clicking the "Select an area..." button again allows replacing a previous area selection. <br/>
 	<strong>Notes:</strong>
    <ul>
       <li>The data does not cover all of Australia.</li>
