--- a/source/icsm/help/help.html
+++ b/source/icsm/help/help.html
@@ -7,12 +7,11 @@
 			<div class="panel-body">
 				The steps to get data!
 				<ol>
-					<li>Select dataset of interest <i class="fa fa-download"></i> from Select tab</li>
-					<li>Define area</li>
-					<li>Select output format</li>
-					<li>Select coordinate system</li>
+					<li>Define area of interest</li>
+					<li>Select datasets</li>
+					<li>Confirm selections</li>
 					<li>Enter email address</li>
-					<li>Submit entries</li>
+					<li>Start extract</li>
 				</ol>
 				An email will be sent to you on completion of the data extract with a link to your data.
 				<icsm-faqs faqs="help.faqs" ></icsm-faqs>
