--- a/source/placenames/search/search.html
+++ b/source/placenames/search/search.html
@@ -9,7 +9,7 @@
             <input type="text" ng-model="state.filter" placeholder="Match by feature name..." ng-model-options="{ debounce: 300}"
                   typeahead-on-select="select($item, $model, $label)" typeahead-template-url="placenames/search/typeahead.html"
                   class="form-control" typeahead-min-length="0" uib-typeahead="doc as doc.name for doc in loadDocs(state.filter)"
-                  typeahead-loading="loadingLocations" typeahead-no-results="noResults">
+                  typeahead-loading="loadingLocations" typeahead-no-results="noResults" placenames-clear>
 
             <span class="input-group-btn">
             <button class="btn btn-primary" type="button" ng-click="search()" ng-disabled="!state.persist.data">Search</button>
