Improve title on Google link

--- a/source/placenames/results/item.html
+++ b/source/placenames/results/item.html
@@ -5,7 +5,8 @@
                 tooltip-append-to-body="true" title="Zoom to location and mark." tooltip-placement="left" uib-tooltip="Zoom to location and mark">
             <i class="fa fa-lg fa-flag-o"></i>
          </button>
-         <span><a ng-href="{{vm.item | pnGoogleLink}}" target="_google" title="View in Google maps">{{vm.item.name}}</a></span>
+         <span><a ng-href="{{vm.item | pnGoogleLink}}" target="_google"
+            title="View in Google maps. While the location will always be correct, Google will do a best guess at matching the Gazetteer name to its data.">{{vm.item.name}}</a></span>
          <span class="pull-right">Record ID: {{vm.feature.attributes.Record_ID}}</span>
       </div>
    </div>
