Run filter after search close. Put iresults spinner

--- a/source/placenames/results/item.html
+++ b/source/placenames/results/item.html
@@ -1,3 +1,4 @@
+<div>
 <div class="container-fluid">
    <div class="row">
       <div class="col-md-12 pn-header" >
@@ -7,9 +8,12 @@
          </button>
          <span><a ng-href="{{vm.item | pnGoogleLink}}" target="_google"
             title="View in Google maps. While the location will always be correct, Google will do a best guess at matching the Gazetteer name to its data.">{{vm.item.name}}</a></span>
-         <span class="pull-right">Record ID: {{vm.feature.attributes.Record_ID}}</span>
+         <span class="pull-right">Record ID: {{vm.item.recordId}}</span>
       </div>
    </div>
+</div>
+<div ng-if="!vm.feature" style="padding:20px 10px 130px;"><i class="fa-spinner fa-spin fa fa-lf"></i>Loading full data&hellip;</div>
+<div class="container-fluid" ng-if="vm.feature">
    <div class="row" ng-if="vm.feature.attributes.Variant_Name">
       <div class="col-md-4">Variant Name</div>
       <div class="col-md-8">{{vm.feature.attributes.Variant_Name | pnSplitBar}}</div>
@@ -48,19 +52,30 @@
    </div>
    <div class="row">
       <div class="col-md-4">Latitude</div>
-      <div class="col-md-8"><span class="pn-numeric">
-         {{vm.feature.attributes.Lat_degrees}}&deg;
-         {{vm.feature.attributes.Lat_minutes}}&prime;
-         {{vm.feature.attributes.Lat_seconds}}&Prime;
-         ({{vm.feature.attributes.Latitude}}&deg;)</span></div>
+      <div class="col-md-4">
+         <span class="pn-numeric">
+            {{vm.feature.attributes.Lat_degrees}}&deg;
+            {{vm.feature.attributes.Lat_minutes}}&prime;
+            {{vm.feature.attributes.Lat_seconds}}&Prime;
+         </span>
+      </div>
+      <div class="col-md-4">
+         <span class="pn-numeric">
+            {{vm.feature.attributes.Latitude}}&deg;
+         </span>
+      </div>
    </div>
 
    <div class="row">
       <div class="col-md-4">Longitude</div>
-      <div class="col-md-8"><span class="pn-numeric">
+      <div class="col-md-4"><span class="pn-numeric">
          {{vm.feature.attributes.Long_degrees}}&deg;
          {{vm.feature.attributes.Long_minutes}}&prime;
          {{vm.feature.attributes.Long_seconds}}&Prime;
-         ({{vm.feature.attributes.Longitude}}&deg;)</span></div>
+         </span>
+      </div>
+      <div class="col-md-4">
+         <span class="pn-numeric">
+         {{vm.feature.attributes.Longitude}}&deg;</span></div>
    </div>
 </div>
