Add autoscroll to results plus downloads

--- a/source/placenames/results/item.html
+++ b/source/placenames/results/item.html
@@ -78,4 +78,12 @@
          <span class="pn-numeric">
          {{vm.feature.attributes.Longitude}}&deg;</span></div>
    </div>
+   <div class="row" style="padding-top:5px; padding-bottom:5px; background-color:#f8f8ff;border-top:1px solid #f0f0f0">
+      <div class="col-md-12">Download as:
+         <span class="pull-right">
+            [<a href"javascript:void()" ng-click="vm.download('esri')">ESRI JSON Format</a>]
+            [<a href"javascript:void()" ng-click="vm.download('wfs')">WFS Get Feature</a>]
+         </span>
+      </div>
+   </div>
 </div>
