--- a/source/placenames/search/typeahead.html
+++ b/source/placenames/search/typeahead.html
@@ -1,4 +1,4 @@
-<a placenames-options ng-mouseenter="enter()" ng-mouseleave="leave()"  tooltip-append-to-body="true"
+<a pn-options ng-mouseenter="enter()" ng-mouseleave="leave()"  tooltip-append-to-body="true"
                tooltip-placement="left" uib-tooltip-html="match.model | pnTooltip">
    <span ng-bind-html="match.model.name | uibTypeaheadHighlight:query"></span>
    (<span ng-bind-html="match.model.recordId"></span>)
