--- a/source/placenames/panes/panes.html
+++ b/source/placenames/panes/panes.html
@@ -1,15 +1,15 @@
 <div class="container contentContainer">
 	<div class="row icsmPanesRow" >
 		<div class="icsmPanesCol" ng-class="{'col-md-12':!view, 'col-md-7':view}" style="padding-right:0">
-			<div class="expToolbar row noPrint" placenames-toolbar-row map="root.map" ></div>
+			<div class="expToolbar row noPrint" pn-toolbar-row map="root.map" ></div>
 			<div class="panesMapContainer target" geo-map configuration="data.map">
 			    <geo-extent></geo-extent>
 			</div>
     		<div geo-draw data="data.map.drawOptions" line-event="elevation.plot.data" rectangle-event="bounds.drawn"></div>
-    		<div placenames-tabs class="icsmTabs"  ng-class="{'icsmTabsClosed':!view, 'icsmTabsOpen':view}"></div>
+    		<div pn-tabs class="icsmTabs"  ng-class="{'icsmTabsClosed':!view, 'icsmTabsOpen':view}"></div>
 		</div>
 		<div class="icsmPanesColRight" ng-class="{'hidden':!view, 'col-md-5':view}" style="padding-left:0; padding-right:0">
-			<div class="pnTabContentItem" ng-show="view == 'search'" ><placenames-search></placenames-search></div>
+			<div class="pn-tab-content-item" ng-show="view == 'search'" ><pn-search></pn-search></div>
 		</div>
 	</div>
 </div>
