--- a/source/placenames/results/results.html
+++ b/source/placenames/results/results.html
@@ -1,22 +1,27 @@
-<div class="pn-container" ng-if="ctrl.data.searched">
-   <nav class="navbar navbar-default" style="min-height:25px">
-      <div class="container-fluid">
-         <div class="navbar-header">
-            <div class="navbar-brand">
-               <a href="#" ng-click="ctrl.clear()"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
-               Matched {{ctrl.data.persist.data.response.numFound | number}} features
-               <span ng-if="!ctrl.data.persist.item">, nearest {{ctrl.data.persist.data.response.docs.length | number}} features
-                  <a href"javascript:void()" ng-click="ctrl.download()" uib-tooltip="Download listed features in ESRI JSON format" tooltip-placement="bottom"><i class="fa fa-download"></i></a>
-               </span>
-            </div>
-         </div>
-      </div>
-   </nav>
-
-   <div class="pn-results" common-scroller more="ctrl.more()" ng-if="ctrl.data.searched">
-      <placenames-results-item ng-if="ctrl.data.persist.item" item="ctrl.data.persist.item"></placenames-results-item>
-      <div class="pn-results-list" ng-if="!ctrl.data.persist.item" ng-repeat="doc in ctrl.data.persist.data.response.docs">
-         <placenames-results-item item="doc"></placenames-results-item>
+<div class="panel panel-default pn-container" ng-if="pr.data.searched" common-scroller more="pr.more()" ng-if="pr.data.searched">
+   <div class="panel-heading" style="min-height:25px">
+      <a href="#" ng-click="pr.clear()" uib-tooltip="Clear results and return to search" tooltip-placement="right">
+         <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+      </a>
+      <span ng-if="pr.data.searched.item">
+         Showing selected feature
+      </span>
+      <span ng-if="!pr.data.searched.item">
+         Matched {{pr.data.searched.data.response.numFound | number}} features,
+         <a href"javascript:void()" ng-click="pr.download()" uib-tooltip="Download listed features in ESRI JSON format" tooltip-placement="bottom">
+            download {{pr.data.searched.data.response.docs.length | number}} features
+            <i class="fa fa-download"></i>
+         </a>
+      </span>
+      <a href"javascript:void()" ng-if="!pr.data.searched.item" ng-click="pr.more()" tooltip-placement="top"  class="pull-right"
+               uib-tooltip="Scroll to the bottom of results or click here to load more matching features">
+         [Load more...]
+      </a>
+   </div>
+   <div class="panel-heading">
+      <pn-results-item ng-if="pr.data.searched.item" item="pr.data.searched.item"></pn-results-item>
+      <div class="pn-results-list" ng-if="!pr.data.searched.item" ng-repeat="doc in pr.data.searched.data.response.docs">
+         <pn-results-item item="doc"></pn-results-item>
       </div>
    </div>
 </div>
