Remove Elvis, upgrade Google API, move contributors

--- a/source/icsm/app/app.html
+++ b/source/icsm/app/app.html
@@ -2,11 +2,11 @@
 	<!-- BEGIN: Sticky Header -->
 	<div explorer-header style="z-index:1"
 			class="navbar navbar-default navbar-fixed-top"
-			heading="'ELVIS - Foundation Spatial Data'"
+			heading="'Elevation'"
 			headingtitle="'ICSM'"
-			breadcrumbs="[{name:'ICSM', title: 'Reload ELVIS - Foundation Spatial Data', url: '.'}]"
-			helptitle="'Get help about ELVIS - Foundation Spatial Data'"
-			helpalttext="'Get help about ELVIS - Foundation Spatial Data'">
+			breadcrumbs="[{name:'ICSM', title: 'Reload Elevation', url: '.'}]"
+			helptitle="'Get help about Elevation'"
+			helpalttext="'Get help about Elevation'">
 	</div>
 	<!-- END: Sticky Header -->
 
