--- a/source/icsm/header/header.html
+++ b/source/icsm/header/header.html
@@ -1,28 +1,10 @@
 <div class="container-full common-header" style="padding-right:10px; padding-left:10px">
-    <div class="navbar-header">
-
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".ga-header-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-
-        <a href="http://www.ga.gov.au" class="hidden-xs header-logo" style="padding-right: 0">
-            <img src="icsm/resources/img/Geoscience Australia.jpg" alt="Geoscience Australia" class="elvis-logo"></img>
-        </a>
-        <a href="http://spatialservices.finance.nsw.gov.au/" class="hidden-xs header-logo" style="padding-right: 0">
-            <img src="icsm/resources/img/NSW.jpg" alt="NSW Land $amp;Property Information" class="elvis-logo"></img>
-        </a>
-        <a href="http://www.ga.gov.au" class="hidden-xs header-logo last">
-            <img src="icsm/resources/img/logo-ACT.jpg" alt="ACT Government" class="elvis-logo"></img>
-         </a>
-        <a href="http://www.ga.gov.au" class="visible-xs"><img src="icsm/resources/img/icsm-logo-sml.gif" alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="logo-stacked"></img></a>
-        <a href="/" class="appTitle visible-xs"><h1 style="font-size:120%">{{heading}}</h1></a>
-    </div>
     <div class="navbar-collapse collapse ga-header-collapse">
         <ul class="nav navbar-nav">
             <li class="hidden-xs"><a href="/"><h1 class="applicationTitle">{{heading}}</h1></a></li>
+            <li class="hidden-xs">
+               <icsm-contributors-link></icsm-contributors-link>
+            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right nav-icons">
         	<li common-navigation ng-show="username" role="menuitem" style="padding-right:10px"></li>
