--- a/source/icsm/contributors/show.html
+++ b/source/icsm/contributors/show.html
@@ -1,3 +1,2 @@
-<a ng-mouseenter="over()" ng-mouseleave="out()"
-      style="padding-left: 60px;position: relative;top: 50px;"
-      ng-click="toggleStick()" href="javascript:void(0)">Contributors</a>
+<a ng-mouseenter="over()" ng-mouseleave="out()" class="contributors-link" title="Click to lock/unlock contributors list."
+      ng-click="toggleStick()" href="#contributors0">Contributors</a>
