--- a/source/icsm/header/header.html
+++ b/source/icsm/header/header.html
@@ -2,18 +2,26 @@
     <div class="navbar-collapse collapse ga-header-collapse">
         <ul class="nav navbar-nav">
             <li class="hidden-xs"><a href="/"><h1 class="applicationTitle">{{heading}}</h1></a></li>
-            <li class="hidden-xs">
-               <icsm-contributors-link></icsm-contributors-link>
-            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right nav-icons">
+        	<li role="menuitem" style="padding-right:10px;position: relative;top: -3px;">
+              <span class="altthemes-container">
+	               <span>
+                     <a title="Location INformation Knowledge platform (LINK)" href="http://fsdf.org.au/">
+                        <img alt="FSDF" src="icsm/resources/img/FSDFimagev4.0.png" style="height: 66px">
+                     </a>
+                  </span>
+               </span>
+           </li>
         	<li common-navigation ng-show="username" role="menuitem" style="padding-right:10px"></li>
 			<li mars-version-display role="menuitem"></li>
 			<li style="width:10px"></li>
         </ul>
     </div><!--/.nav-collapse -->
 </div>
-
+<div class="contributorsLink" style="position: absolute; right:7px; bottom:15px">
+      <icsm-contributors-link></icsm-contributors-link>
+</div>
 <!-- Strap -->
 <div class="row">
     <div class="col-md-12">
