Launch pages into _blank

--- a/source/common/navigation/altthemes.html
+++ b/source/common/navigation/altthemes.html
@@ -1,6 +1,6 @@
 <span class="altthemes-container">
 	<span ng-repeat="item in themes | altthemesEnabled">
-       <a title="{{item.label}}" ng-href="{{item.url}}" class="altthemesItemCompact">
+       <a title="{{item.label}}" ng-href="{{item.url}}" class="altthemesItemCompact" target="_blank">
          <span class="altthemes-icon" ng-class="item.className"></span>
        </a>
     </li>
