--- a/source/icsm/header/header.html
+++ b/source/icsm/header/header.html
@@ -7,7 +7,7 @@
         	<li role="menuitem" style="padding-right:10px;position: relative;top: -3px;">
               <span class="altthemes-container">
 	               <span>
-                     <a title="Location INformation Knowledge platform (LINK)" href="http://fsdf.org.au/">
+                     <a title="Location INformation Knowledge platform (LINK)" href="http://fsdf.org.au/" target="_blank">
                         <img alt="FSDF" src="icsm/resources/img/FSDFimagev4.0.png" style="height: 66px">
                      </a>
                   </span>
