--- a/source/icsm/glossary/glossary.html
+++ b/source/icsm/glossary/glossary.html
@@ -1,26 +1,26 @@
 <div ng-controller="GlossaryCtrl as glossary">
-	<div style="position:relative;padding:5px;padding-left:10px;" >
-		<div class="panel panel-default" style="padding:5px;" >
-			<div class="panel-heading">
-				<h3 class="panel-title">Glossary</h3>
-			</div>
-			<div class="panel-body">
-				
-				
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th>Term</th>
-				<th>Definition</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="term in glossary.terms">
-				<td>{{term.term}}</td>
-				<td>{{term.definition}}</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-</div>
+   <div style="position:relative;padding:5px;padding-left:10px;">
+      <div class="panel" style="padding:5px;">
+         <p style="text-align: left; margin: 10px; font-size: 14px;">
+	         <strong>Glossary</strong>
+         </p>
+
+         <div class="panel-body">
+            <table class="table table-striped">
+               <thead>
+                  <tr>
+                     <th>Term</th>
+                     <th>Definition</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  <tr ng-repeat="term in glossary.terms">
+                     <td>{{term.term}}</td>
+                     <td>{{term.definition}}</td>
+                  </tr>
+               </tbody>
+            </table>
+         </div>
+      </div>
+   </div>
 </div>
