--- a/source/icsm/help/help.html
+++ b/source/icsm/help/help.html
@@ -1,21 +1,17 @@
-<div ng-controller="HelpCtrl as help">
-	<div style="position:relative;padding:5px;padding-left:10px;" >
-		<div class="panel panel-default" style="padding:5px;" >
-			<div class="panel-heading">
-				<h3 class="panel-title">Help</h3>
-			</div>
-			<div class="panel-body">
-				The steps to get data!
-				<ol>
-					<li>Define area of interest</li>
-					<li>Select datasets</li>
-					<li>Confirm selections</li>
-					<li>Enter email address</li>
-					<li>Start extract</li>
-				</ol>
-				An email will be sent to you on completion of the data extract with a link to your data.
-				<icsm-faqs faqs="help.faqs" ></icsm-faqs>
-			</div>
-		</div>
-	</div>
+<p style="text-align: left; margin: 10px; font-size: 14px;">
+	<strong>Help</strong>
+</p>
+
+<div class="panel-body" ng-controller="HelpCtrl as help">
+	The steps to get data!
+	<ol>
+		<li>Define area of interest</li>
+		<li>Select datasets</li>
+		<li>Confirm selections</li>
+		<li>Enter email address</li>
+		<li>Start extract</li>
+	</ol>
+	An email will be sent to you on completion of the data extract with a link to your data.
+   <hr>
+	<icsm-faqs faqs="help.faqs" ></icsm-faqs>
 </div>
