--- a/source/positioning/csv/csv.html
+++ b/source/positioning/csv/csv.html
@@ -1,11 +1,10 @@
-<div class="panel panel-default">
-  <div class="panel-heading">Just a few questions about your CSV file</div>
-  <div class="panel-body">
-
+<div>
+  <h4>Just a few questions about your CSV file</h4>
+  <div>
 		<div class="row">
 			<div class="col-md-3">
 				<label for="geoprocessOutCoordSys">
-					Coordinate System
+					Coordinate System<mandatory />
 				</label>
 			</div>
 			<div class="col-md-9">
@@ -14,101 +13,87 @@
 			</div>
 		</div>
 
-      <hr />
-
       <div class="row">
 			<div class="col-md-3 csv-label">
-				Lat/lng fields are in
+				Lat/lng fields are in<mandatory />
 			</div>
 			<div class="col-md-9">
 				<label for="csvDegrees">
                Decimal degrees (2 cols)
 				</label>
-            <input name="csvDegrees" type="radio" value="deg" ng-model="dmsType" />
+            <input name="csvDegrees" type="radio" value="deg" ng-model="state.dmsType" />
             or
 				<label for="csvDms">
                Degrees/minutes/seconds (6 cols)
 				</label>
-            <input name="csvDms" type="radio" value="dms" ng-model="dmsType" />
+            <input name="csvDms" type="radio" value="dms" ng-model="state.dmsType" />
 			</div>
       </div>
 
-      <div class="row" ng-if="dmsType == 'deg'">
+      <div class="row" ng-if="state.dmsType == 'deg'">
 			<div class="col-md-3 csv-label">
-				Columns (decimal degrees)
+				Columns
 			</div>
 			<div class="col-md-9">
 				<label for="csvSelectLatDecDegrees" style="width:9em">
-               Latitude
+               Latitude<mandatory />
 				</label>
-            <select id="csvSelectLatDecDegrees" ng-model="state.latDecDegreesCol"
+            <select id="csvSelectLatDecDegrees" ng-model="state.latDegreesCol"
                   ng-options="o as o for o in columns"></select>
             <br/>
 				<label for="csvSelectLngDecDegrees" style="width:9em">
-               Longitude
+               Longitude<mandatory />
 				</label>
-            <select id="csvSelectLngDecDegrees" ng-model="state.lngDecDegreesCol"
+            <select id="csvSelectLngDecDegrees" ng-model="state.lngDegreesCol"
                   ng-options="o as o for o in columns"></select>
 			</div>
       </div>
 
 
-      <div class="row" ng-if="dmsType == 'dms'">
+      <div class="row" ng-if="state.dmsType == 'dms'">
 			<div class="col-md-3 csv-label">
 				Columns
 			</div>
 			<div class="col-md-9 csv-fix-label">
 				<label for="csvSelectLatDegrees">
-               Latitude Degrees
+               Latitude Degrees<mandatory />
 				</label>
             <select id="csvSelectLatDegrees" ng-model="state.latDegreesCol"
                   ng-options="o as o for o in columns"></select>
             <br/>
 				<label for="csvSelectLatMinutes">
-               Minutes
+               Minutes<mandatory />
 				</label>
             <select id="csvSelectLatMinutes" ng-model="state.latMinutesCol"
                   ng-options="o as o for o in columns"></select>
             <br/>
 				<label for="csvSelectLatSeconds">
-               Seconds
+               Seconds<mandatory />
 				</label>
             <select id="csvSelectLatSeconds" ng-model="state.latSecondsCol"
                   ng-options="o as o for o in columns"></select>
-            <hr/>
+            <br/>
    			<label for="csvSelectLngDegrees">
-               Longitude Degrees
+               Longitude Degrees<mandatory />
 				</label>
             <select id="csvSelectLngDegrees" ng-model="state.lngDegreesCol"
                   ng-options="o as o for o in columns"></select>
             <br/>
 				<label for="csvSelectLngMinutes">
-               Minutes
+               Minutes<mandatory />
 				</label>
             <select id="csvSelectLngMinutes" ng-model="state.lngMinutesCol"
                   ng-options="o as o for o in columns"></select>
             <br/>
 				<label for="csvSelectLngSeconds">
-               Seconds
+               Seconds<mandatory />
 				</label>
             <select id="csvSelectLngSeconds" ng-model="state.lngSecondsCol"
                   ng-options="o as o for o in columns"></select>
 
 			</div>
       </div>
-
-      <hr />
-
-		<div class="row">
-  			<div class="col-md-3">
-				<label for="geoprocessOutputFormat">
-					Output Format
-				</label>
-			</div>
-			<div class="col-md-9">
-				<select id="geoprocessOutputFormat" style="width:95%" ng-model="state.outFormat"
-                  ng-options="opt.value for opt in settings.processing.outFormat"></select>
-			</div>
-		</div>
+      <hr/>
+      <output-format state="state" />
   </div>
 </div>
