--- a/source/positioning/dialog/dialog.html
+++ b/source/positioning/dialog/dialog.html
@@ -1,17 +1,37 @@
 <div class="upload-dialog">
-   <p style="font-weight: bold" class="bg-info" ng-if="!state.file">Select and drop file for reprojection</p>
+   <p style="font-weight: bold" class="bg-info" ng-if="!state.file">
+      <i class="fa fa-hand-o-left point-at-box fa-2x" aria-hidden="true" style="padding-right:12px;"></i>
+      Select and drop file for reprojection
+   </p>
    <div ng-if="state.file">
-      <div>
-         <h4>File selected {{state.file.name}} ({{state.file.size | bytes}}).</h4>
-      </div>
+      <h3>Selected {{state.file.name}} ({{state.file.size | bytes}})</h3>
    </div>
    <div style="text-align:right" ng-if="state.file.size > settings.maxFileSize">
       The size of the file to be uploaded must not exceed {{settings.maxFileSize | bytes}}. Please select a smaller file.
       <button type="button" class="btn btn-primary" ng-click="cancel()">OK</button>
    </div>
+   <hr />
    <div ng-show="state.file && state.file.size < settings.maxFileSize">
       <div ng-if="state.extension == 'csv'">
          <csv-file state="state" settings="settings" />
+      </div>
+      <div ng-if="state.extension == 'shp'">
+         <shp-file state="state" settings="settings" />
+      </div>
+   </div>
+   <hr/>
+   <div ng-show="state.file">
+      <div>
+         <h4>Output filename of your reprojection<mandatory /></h4>
+         <filename state="state" />
+      </div>
+      <div>
+         <h4>Nominate your notification email address<mandatory /></h4>
+         <email state="state" />
+      </div>
+
+      <div style="padding-top: 10px">
+         <progress-bar state="state" />
       </div>
    </div>
 </div>
