--- a/source/positioning/dialog/submit.html
+++ b/source/positioning/dialog/submit.html
@@ -2,23 +2,23 @@
    <div class="row">
       <div class="col-md-6" style="padding-top:7px">
          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{processing.percentComplete}}" aria-valuemin="0" aria-valuemax="100" style="width: {{processing.percentComplete}}%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{state.percentComplete}}" aria-valuemin="0" aria-valuemax="100" style="width: {{state.percentComplete}}%;">
                 <span class="sr-only">60% Complete</span>
             </div>
          </div>
       </div>
       <div class="col-md-4" style="padding-top:7px">
          <span style="padding-right:10px" uib-tooltip="Select a valid coordinate system." tooltip-placement="left">
-            <i class="fa fa-crosshairs fa-2x" ng-class="{'ed-valid': processing.validProjection, 'ed-invalid': !processing.validProjection }"></i>
+            <i class="fa fa-crosshairs fa-2x" ng-class="{'ed-valid': state.validProjection, 'ed-invalid': !state.validProjection }"></i>
          </span>
          <span style="padding-right:10px" uib-tooltip="Select a latitude and longitude columns." tooltip-placement="left">
-            <i class="fa fa-arrows fa-2x" ng-class="{'ed-valid': processing.validFields, 'ed-invalid': !processing.validFields}"></i>
+            <i class="fa fa-arrows fa-2x" ng-class="{'ed-valid': state.validFields, 'ed-invalid': !state.validFields}"></i>
          </span>
          <span style="padding-right:10px" uib-tooltip="Select a valid download format." tooltip-placement="left">
-            <i class="fa fa-files-o fa-2x" ng-class="{'ed-valid': processing.validFormat, 'ed-invalid': !processing.validFormat}"></i>
+            <i class="fa fa-files-o fa-2x" ng-class="{'ed-valid': state.validFormat, 'ed-invalid': !state.validFormat}"></i>
          </span>
          <span style="padding-right:10px" uib-tooltip="Provide an email address." tooltip-placement="left">
-            <i class="fa fa-envelope fa-2x" ng-class="{'ed-valid': processing.validEmail, 'ed-invalid': !processing.validEmail}"></i>
+            <i class="fa fa-envelope fa-2x" ng-class="{'ed-valid': state.validEmail, 'ed-invalid': !state.validEmail}"></i>
          </span>
       </div>
       <div class="col-md-2">
