Tweak form for CVS and Shapefile post review.

--- a/source/icsm/header/header.html
+++ b/source/icsm/header/header.html
@@ -13,7 +13,7 @@
                   </span>
                </span>
            </li>
-        	<li common-navigation ng-show="username" role="menuitem" style="padding-right:10px"></li>
+        	<li common-navigation role="menuitem" current="current" style="padding-right:10px"></li>
 			<li mars-version-display role="menuitem"></li>
 			<li style="width:10px"></li>
         </ul>
