--- a/source/placenames/header/header.html
+++ b/source/placenames/header/header.html
@@ -18,7 +18,7 @@
             <li class="hidden-xs"><a href="/"><h1 class="applicationTitle">{{heading}}</h1></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right nav-icons">
-        	<li common-navigation ng-show="username" role="menuitem" style="padding-right:10px"></li>
+        	<li common-navigation current="current" role="menuitem" style="padding-right:10px"></li>
 			<li mars-version-display role="menuitem"></li>
 			<li style="width:10px"></li>
         </ul>
